# libayatana-indicator

./: .build.yml  .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  libindicator3-1.install  trim-lcov.py
data/: CMakeLists.txt  GNOME_FastUserSwitchApplet.server.in.in  GNOME_IndicatorApplet.server.in.in  Makefile.am  ayatana-indicator.pc.in  ayatana-indicator3-0.4.pc.in  ayatana-indicator3-no-IDO.pc.in  ayatana-indicator3.pc.in  ayatana-indicators-pre.target  ayatana-indicators.target  indicator-applet.schemas.in
data/icons/16x16/panel/: Makefile.am
data/icons/22x22/panel/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/24x24/panel/: Makefile.am
data/icons/32x32/panel/: Makefile.am
data/icons/48x48/panel/: Makefile.am
data/icons/scalable/panel/: Makefile.am
debian/: ayatana-indicator-common.install  ayatana-indicator-common.links  changelog  control  copyright  indicator-applet-sus.install  indicator-applet.install  libayatana-indicator-dev.install  libayatana-indicator3-7.install  libayatana-indicator3-7.symbols  libayatana-indicator3-dev.install  libayatana-indicator3-tools.install  libayatana-indicator7.install  libayatana-indicator7.symbols  libindicate-dev.install  libindicate-doc.install  libindicate-gtk-dev.install  libindicate-gtk0.install  libindicate.install  libindicate0.install  libindicator-debugenv.install  libindicator-dev.install  libindicator-tools.install  libindicator0.install  libindicator3-7.install  libindicator3-dev.install  libindicator3-tools.install  libindicator7.install  rules  watch
debian/patches/: debian-changes  workaround-icon-crash.patch
docs/: Makefile.am  indicator-dbus.txt
docs/reference/: Makefile.am  libindicate-decl.txt  libindicate-docs.sgml  libindicate-sections.txt  libindicate.types
docs/reference/tmpl/: libindicate-unused.sgml
examples/: Makefile.am  im-client.c  indicate-alot.c  indicate-and-crash.c  listen-and-print.c
helper/: test-loader-build  test-loader.c
libayatana-indicator/: Makefile.am  Makefile.in  ayatana-indicator-0.4.pc.in.in  ayatana-indicator3-0.4.pc.in.in  ayatanamenuitemfactory.c  ayatanamenuitemfactory.h  indicator-desktop-shortcuts.c  indicator-ng.c  indicator-object.c  indicator-service-manager.c  indicator-service.c
libindicate/: Makefile.am  gir.sh  indicate-interface.xml  indicate-listener.xml  indicate-server.xml  indicate.pc.in  indicator-message.c  indicator-message.h  indicator.c  indicator.h  interests-priv.h  interests.h  listener-marshal.list  listener-private.h  listener.c  listener.h  server-marshal.list  server.c  server.h
libindicate-gtk/: Makefile.am  indicate-gtk.pc.in  indicator.c  indicator.h  listener.c  listener.h
libindicate/tests/: Makefile.am  indicate-and-crash.c  listen-and-print.c  test.js
libindicator/: Makefile.am  Makefile.in  dbus-shared.h  gen-indicator-service.xml.c  gen-indicator-service.xml.h  indicator-0.4.pc.in.in  indicator-desktop-shortcuts.c  indicator-desktop-shortcuts.h  indicator-image-helper.c  indicator-image-helper.h  indicator-instance.c  indicator-instance.h  indicator-ng.c  indicator-ng.h  indicator-object-enum-types.c  indicator-object-enum-types.c.template  indicator-object-enum-types.h  indicator-object-enum-types.h.template  indicator-object-marshal.c  indicator-object-marshal.h  indicator-object-marshal.list  indicator-object.c  indicator-object.h  indicator-service-manager.c  indicator-service-manager.h  indicator-service.c  indicator-service.h  indicator-service.xml  indicator.h  indicator.pc.in  indicator.pc.in.in  indicator3-0.4.pc.in.in  indicator3.pc.in  indicator3.pc.in.in
m4/: gcov.m4
po/: POTFILES.in  POTFILES.skip
src/: CMakeLists.txt  Makefile.am  applet-main.c  ayatana-indicator-0.4.pc.in.in  dbus-shared.h  indicator-audio.c  indicator-audio.h  indicator-desktop-shortcuts.c  indicator-image-helper.c  indicator-image-helper.h  indicator-messages.c  indicator-messages.h  indicator-network.c  indicator-network.h  indicator-ng.c  indicator-object-enum-types.h.template  indicator-power.c  indicator-power.h  indicator-service-manager.h  indicator-service.c  indicator-service.xml  indicator-system.c  indicator-system.h  indicator.symbols  menu-dbus.c  menu-dbus.h  slidermenuitem.c  slidermenuitem.h
src-sus/: Makefile.am  applet-main.c
src-sus-only/: Makefile.am
tests/: CMakeLists.txt  Makefile.am  Makefile.in  com.canonical.indicator.no-such-service  com.canonical.indicator.test  com.canonical.indicator.test.service.in  com.canonical.test.indicator  com.canonical.test.nosuchservice.indicator  dummy-indicator-blank.c  dummy-indicator-entry-func.c  dummy-indicator-entry-func.h  dummy-indicator-null.c  dummy-indicator-signaler.c  dummy-indicator-simple.c  dummy-indicator-visible.c  im-client.c  indicate-alot.c  indicate-and-crash.c  indicator-test-service.c  listen-and-print.c  org.ayatana.indicator.no-such-service  org.ayatana.indicator.test  org.ayatana.indicator.test.service.in  run-xvfb.sh  service-manager-connect-service.c  service-manager-connect.c  service-manager-connect.service.in  service-manager-no-connect.c  service-manager-nostart-connect.c  service-shutdown-timeout.c  service-version-bad-service.c  service-version-bad.service.in  service-version-good-service.c  service-version-good.service.in  service-version-manager.c  service-version-multiwatch-manager-impolite.c  service-version-multiwatch-manager.c  service-version-multiwatch-service.c  service-version-values.h  session.conf.in  (+21 more)
tools/: 80indicator-debugging  CMakeLists.txt  Makefile.am  Makefile.in  indicator-debugging  indicator-loader.c
