
SUBDIRS = \
	src \
	libindicate \
	examples \
	data \
	po \
	docs

EXTRA_DIST = \
	COPYING.LIB.LGPL.2.1 \
	COPYING.LIB.LGPL.3 \
	gtk-doc.make \
	omf.make \
	xmldocs.make

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-scrollkeeper

DISTCLEANFILES = \
	indicator-applet-*.tar.gz \
	gtk-doc.make

